# cargo-agdk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  agdk.toml.example
.github/workflows/: ci.yml
src/: cache.rs  clean.rs  config.rs  error.rs  info.rs  install.rs  lib.rs  lock.rs  main.rs  manifest.rs  package.rs  pins.rs  publish.rs  release.rs  target.rs  verify.rs  version_check.rs
stock-sample/: .gitignore  gradle.properties  settings.gradle
stock-sample/app/: build.gradle
stock-sample/app/src/main/: AndroidManifest.xml
stock-sample/app/src/main/java/org/cargoagdk/stocksample/: MainActivity.java
stock-sample/gradle/: libs.versions.toml
